--- a/index.html
+++ b/index.html
@@ -12,7 +12,33 @@
 
 <body>
     <div id="app">
-        <h1>Product goes here</h1>
+        <div class="nav-bar"></div>
+        <div class="cart">Cart({{cart}})</div>
+        <div class="product-display">
+            <div class="product-container">
+                <div class="product-image">
+                    <img :src="image" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="product-info">
+            <a :href="link"><h1>{{product}}</h1></a>
+            <p>{{description}}</p>
+            <p v-if="inventory > 10">In stock</p>
+            <p v-else-if="inventory <= 10 && inventory > 0">Almost out of stock</p>
+            <p v-else>Out of stock</p>
+            <p v-if="onSale">On sale</p>
+            <p v-else>Not on sale</p>
+            <ul>
+                <li v-for="detail in details">{{detail}}</li>
+            </ul>
+            <div v-for="variant in variants" :key="variant.id" @mouseover="updateImage(variant.image)">
+                {{variant.color}}
+            </div>
+            <p>{{sizes}}</p>
+            <button class="button" @click="addToCart">Add to Cart</button>
+            <button class="button" @click="toggleInStock">Stock status</button>
+        </div>
     </div>
 
     <!-- Import Js -->
