--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
             <ul>
                 <li v-for="detail in details">{{detail}}</li>
             </ul>
-            <div v-for="variant in variants" :key="variant.id" @mouseover="updateImage(variant.image)">
+            <div v-for="variant in variants" :key="variant.id" @mouseover="updateImage(variant.image)" class="color-circle" 
+            :style="{backgroundColor: variant.color}">
                 {{variant.color}}
             </div>
             <p>{{sizes}}</p>
-            <button class="button" @click="addToCart">Add to Cart</button>
+            <button class="button" :disabled='!inStock' @click="addToCart" :class="{disabledButton: !inStock}">Add to Cart</button>
             <button class="button" @click="toggleInStock">Stock status</button>
         </div>
     </div>
